Removed testing loop (50k stress test) (Need to make this an option)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"mysql":"latest",
 		"node-uuid":"latest",
 		"jsftp":"latest",
-		"bitly":"latest"
+		"bitly":"latest",
+		"chance":"latest"
 	}
 }
